[package]
name = "deployer"
version = "0.1.0"
authors = ["Adrien Samson <adrien@adriensamson.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
stderrlog = "0.4.3"
structopt = "0.3.13"
toml = "0.5.6"
serde = {version = "1.0.106", features = ["derive"]}
